--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	},
 	"scripts": {
 		"watch": "tsc --watch",
-		"build": "tsc"
+		"build": "tsc",
+		"test": "jest --watch"
 	},
 	"main": "dist/index.js",
 	"files": [
@@ -28,6 +29,7 @@
 	"dependencies": {},
 	"devDependencies": {
 		"@types/node": "^11.10.4",
+		"jest": "^24.9.0",
 		"typescript": "^3.3.3333"
 	}
 }
